fargate/web_app/web_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp-pod
  namespace: default
spec:
  # template:
  #   metadata:
  #     app: webapp
  containers:
  - name: webapp
    image: gcr.io/google-samples/node-hello:1.0
    ports:
     - containerPort: 8080
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "1"
