fargate/web_app/web_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "webapp-ingress"
  namespace: "default"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: webapp-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: "webapp-service"
          servicePort: 80
